service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service-svc-XX
  namespace: lab-london
spec:
  ports:
    - port: 3001
  selector:
    app: shipping-service-XX
  type: NodePort
