ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shipping-service-ingress-XX
  namespace: lab-cnb
spec:
  rules:
  - host: shipping-service-XX.cnb-iks.eu-gb.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: shipping-service-svc-XX
          servicePort: app-port
